--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="search_hint">Search Flickr</string>
+    <string name="title_activity_photo_gallery">PhotoGalleryActivity</string>
     <string name="search">Search</string>
     <string name="clear_search">Clear Search</string>
 </resources>
